poke/testsuite/poke.pkl/cdiv-integers-diag-1.pk
/* { dg-do compile } */

defvar x = 10 /^ 0; /* { dg-error "division by zero" } */
